--- a/public/assets/css/modeule.css
+++ b/public/assets/css/modeule.css
@@ -61,7 +61,7 @@ h2 {
 }
 
     h2.alt {
-        color: #888;
+        color: #f8edeb;
     }
 
         h2.alt strong {
@@ -134,6 +134,8 @@ blockquote {
 
 p, ul, ol, dl, table {
     margin-bottom: 2em;
+    font-size: 18px;
+    color: #6F8B94
 }
 
 br.clear {
